extends BaseEnemy


func _on_detection_area_area_entered(area: Area2D) -> void:
	pass # Replace with function body.



func _on_detection_area_area_exited(area: Area2D) -> void:
	pass # Replace with function body.



func _on_hit_box_area_entered(area: Area2D) -> void:
	pass # Replace with function body.
